GNOME Bugzilla – Bug 712401
videomixer: Segfault when generating color backround in UYVY
Last modified: 2013-11-29 18:53:55 UTC
Launching a simple pipeline like: gst-launch videotestsrc ! videoconvert ! "video/x-raw, format=(string)UYVY, width=(int)320, height=(int)240, pixel-aspect-ratio=(fraction)1/1, interlace-mode=(string)progressive, colorimetry=(string)bt601, framerate=(fraction)30/1" ! videomixer background=1 ! videoconvert ! autovideosink will segfault, the backtrace looks like: (gdb) bt
+ Trace 232782
commit b0529e0fe8b99e63145c1f1237ca13d9e4503767 Author: Sebastian Dröge <sebastian@centricular.com> Date: Fri Nov 29 19:50:24 2013 +0100 videomixer: Fix segfault when filling the background of a UYVY frame https://bugzilla.gnome.org/show_bug.cgi?id=712401