videomixer: Fix segfault when filling the background of a UYVY frame

https://bugzilla.gnome.org/show_bug.cgi?id=712401